<resources>
    <string name="app_name">销售管理</string>

    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>
    <string name="setting">设置</string>
    <string name="name_text">名字</string>
    <string name="price">价格</string>
    <string name="commit">提交</string>
    <string name="count">数量</string>
    <string name="brand">品牌</string>
    <string name="type">类型</string>
    <string name="avg_price">平均价格</string>
    <string name="purchase">进货</string>
    <string name="shipment">出货</string>
    <string name="is_p_img_dsc">进出货图标</string>
    <string name="del_all_ps">全部清除</string>
    <string name="del_all_ps_title">清除全部进出货数据</string>
    <string name="stock">库存</string>
    <string name="logo">logo</string>
    <string name="email_title">chopinsong@gmail.com</string>
    <string name="del_text">删除</string>
    <string name="plus">+</string>
    <string name="X">x</string>
    <string name="select_present">选择赠品</string>
    <string name="add_goods_text">增加</string>
    <string name="remark">备注</string>
    <string name="edit_text">编辑</string>
    <string name="commit_add_good">提交</string>
    <string name="show_add_good_layout">增加货品</string>
    <string name="menu_search">搜索</string>
    <string name="add_goods_title">新增货品</string>
    <string name="cancel">取消</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="profit">利润</string>
    <string name="cancel_button">取消按钮</string>
    <string name="shipment_button">出货按钮</string>
    <string name="purchase_button">进货按钮</string>
    <string name="commit_button">提交按钮</string>
    <string name="ps_title">进出货</string>

    <string name="remark_hint"><font size="13">备注</font></string>
    <string name="count_hint"><font size="13">数量</font></string>
    <string name="customer">客户</string>
    <string name="customer_hint"><font size="13">客户</font></string>
    <string name="type_hint"><font size="13">类型</font></string>
    <string name="brand_hint"><font size="13">品牌</font></string>
    <string name="name_hint"><font size="13">名字</font></string>
    <string name="price_hint"><font size="13">价格</font></string>
    <string name="del_all_data">清除所有数据(包含进出货和货品)</string>
    <string name="goods_list">商品</string>
    <string name="goods_remark_show">显示货品备注</string>
    <string name="default_version">1.0</string>
    <string name="version_text">版本</string>
    <string name="example">例:进货日立手电钻1台</string>
    <string name="title_activity_mm">MMActivity</string>
    <string name="title_home">Home</string>
    <string name="title_stock">库存</string>
    <string name="title_record">记录</string>
    <string name="stock_page_desc">商品描述</string>
    <string name="goods_image">图片</string>
    <string name="is_purchase_text">是否进货</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reverse_display">倒序显示</string>
</resources>
