<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/ps_parse_root"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ps_parse_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cancel_button"
        android:gravity="center"
        android:src="@drawable/ic_close" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ps_parse_content_Layout"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ps_parse_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example"
            android:inputType="textAutoComplete"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/ps_et_text_size" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/ps_parse_commit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/commit_button"
        android:gravity="center"
        android:src="@drawable/ic_check" />
</LinearLayout>