<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="400dp"
    android:id="@+id/profit_root_layout"
    android:orientation="vertical">

    <TextView
        style="@style/title_style"
        android:text="@string/profit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/year_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/year" />

            <Spinner
                android:id="@+id/month_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/month" />


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/profit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>