<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="400dp"
    android:orientation="vertical">

    <TextView
        style="@style/title_style"
        android:text="@string/setting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="@string/del_all_ps_title" />

            <TextView
                android:id="@+id/del_all_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/del_all_ps"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="10dp"
            android:background="@color/bright_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="@string/del_all_data" />

            <TextView
                android:id="@+id/del_all_data_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/del_all_ps"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="10dp"
            android:background="@color/bright_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="@string/goods_remark_show" />

            <CheckBox
                android:id="@+id/show_goods_remark"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="10dp"
            android:background="@color/bright_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="@string/reverse_display" />

            <CheckBox
                android:id="@+id/reverse_display_cb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="80dp"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            android:background="@color/bright_gray" />
    </LinearLayout>


</LinearLayout>